@@ -69,3 +69,87 @@ cdef object _op_MINLOC(object x, object y):
 cdef object _op_REPLACE(object x, object y):
     """replace,  (x, y) -> x"""
     return x
+
+# ---
+
+cdef object op_user_registry = [None]*(1+10)
+
+cdef inline object op_user_py(int index, object x, object y, object dt):
+    return op_user_registry[index](x, y, dt)
+
+cdef inline void op_user_mpi_report_error():
+    import sys, traceback
+    traceback.print_exc()
+    sys.stderr.flush()
+
+cdef inline void op_user_mpi(int index, void *a, void *b, MPI_Aint n, MPI_Datatype *t) with gil:
+    # errors in user-defined reduction operations are unrecoverable
+    try:
+        op_user_py(index, tomemory(a, n), tomemory(b, n), _new_Datatype(t[0]))
+    except:
+        # print the full exception traceback and abort.
+        PySys_WriteStderr("Fatal Python error: exception in user-defined reduction operation\n")
+        op_user_mpi_report_error()
+        MPI_Abort(MPI_COMM_WORLD, 1)
+
+
+cdef inline void op_user_call(int index, void *a, void *b, int *plen, MPI_Datatype *t) nogil:
+    # make it abort if Python has finalized
+    if not Py_IsInitialized(): MPI_Abort(MPI_COMM_WORLD, 1)
+    # make it abort if module clenaup has been done
+    if (<void*>op_user_registry) == NULL: MPI_Abort(MPI_COMM_WORLD, 1)
+    # compute the byte-size of memory buffers
+    cdef MPI_Aint lb=0, extent=0
+    MPI_Type_get_extent(t[0], &lb, &extent)
+    cdef MPI_Aint n = <MPI_Aint>plen[0] * extent
+    # make the actual GIL-safe Python call
+    op_user_mpi(index, a, b, n, t)
+
+cdef void op_user_01(void *a, void *b, int *n, MPI_Datatype *t) nogil: op_user_call( 1, a, b, n, t)
+cdef void op_user_02(void *a, void *b, int *n, MPI_Datatype *t) nogil: op_user_call( 2, a, b, n, t)
+cdef void op_user_03(void *a, void *b, int *n, MPI_Datatype *t) nogil: op_user_call( 3, a, b, n, t)
+cdef void op_user_04(void *a, void *b, int *n, MPI_Datatype *t) nogil: op_user_call( 4, a, b, n, t)
+cdef void op_user_05(void *a, void *b, int *n, MPI_Datatype *t) nogil: op_user_call( 5, a, b, n, t)
+cdef void op_user_06(void *a, void *b, int *n, MPI_Datatype *t) nogil: op_user_call( 6, a, b, n, t)
+cdef void op_user_07(void *a, void *b, int *n, MPI_Datatype *t) nogil: op_user_call( 7, a, b, n, t)
+cdef void op_user_08(void *a, void *b, int *n, MPI_Datatype *t) nogil: op_user_call( 8, a, b, n, t)
+cdef void op_user_09(void *a, void *b, int *n, MPI_Datatype *t) nogil: op_user_call( 9, a, b, n, t)
+cdef void op_user_10(void *a, void *b, int *n, MPI_Datatype *t) nogil: op_user_call(10, a, b, n, t)
+
+cdef MPI_User_function *op_user_map(int index) nogil:
+    if   index ==  1: return op_user_01
+    elif index ==  2: return op_user_02
+    elif index ==  3: return op_user_03
+    elif index ==  4: return op_user_04
+    elif index ==  5: return op_user_05
+    elif index ==  6: return op_user_06
+    elif index ==  7: return op_user_07
+    elif index ==  8: return op_user_08
+    elif index ==  9: return op_user_09
+    elif index == 10: return op_user_10
+    else:             return NULL
+
+cdef int op_user_new(object function, MPI_User_function **cfunction) except -1:
+    # find a free slot in the registry
+    cdef int index = 0
+    try: index = op_user_registry.index(None, 1)
+    except ValueError: raise RuntimeError(
+        mpistr("cannot create too many user-defined reduction operations"))
+    # the line below will fail
+    # if the function is not callable
+    function.__call__
+    # register the Python function,
+    # map it to the associated C function,
+    # and return the slot index in registry
+    op_user_registry[index] = function
+    cfunction[0] = op_user_map(index)
+    return index
+
+cdef int op_user_del(int *index) except -1:
+    # free slot in the registry
+    cdef Py_ssize_t idx = index[0]
+    index[0] = 0 # clear the value
+    if idx > 0: op_user_registry[idx] = None
+    return 0
+
+# ---
